# src/routes/migrant.routes.js
@@ -11,7 +11,7 @@ import { verifyAdmin } from '../middlewares/auth/admin.auth.js';
 
 const router = Router();
 
-router.get('/profile/:id', verifyRole, migrantController.profile);
+router.get('/profile', verifyRole, migrantController.profile);
 router.post('/check-email', verifyAdmin, migrantController.emailExist);
 router.get('/count', verifyAdmin, migrantController.count);
 router.get('/search', verifyAdmin, migrantController.search);
